# Claude-Document-Extractor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_extractor.md  api_config.json  doc_extractor.py  doc_extractor_gui.py  main.py  project-structure-summary.md  pyproject.toml  requirements.txt  setup.py  start_gui.sh  statusline.py  test_gui.py  test_gui_features.py  test_structure.py  使用说明.md
.claude/: settings.local.json
docs/: README.md
scripts/: run_cli.py  run_gui.py
src/core/: capture.py  config.py  doc_extractor.py  ocr.py  scrolling.py
src/gui/: __init__.py  app.py  dialogs.py  styles.py
src/tools/: __init__.py  area_selector.py
src/utils/: helpers.py  logger.py
