[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extractor"
version = "1.0.0"
description = "从受限制的云桌面环境自动提取文档内容"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude Code Assistant", email = "claude@anthropic.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Multimedia :: Graphics :: Capture",
]
keywords = ["ocr", "document", "extraction", "automation", "screenshot"]
requires-python = ">=3.8"
dependencies = [
    "pyautogui>=0.9.53",
    "mss>=8.0.0",
    "Pillow>=9.0.0",
    "pytesseract>=0.3.10",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=5.0.0",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]
packaging = [
    "pyinstaller>=5.0.0",
    "py2app>=0.28.6",
]

[project.scripts]
doc-extractor = "main:main"
doc-extractor-gui = "scripts.run_gui:main"

[project.urls]
Homepage = "https://github.com/YukiAsuna19990413/Claude-Document-Extractor"
Repository = "https://github.com/YukiAsuna19990413/Claude-Document-Extractor"
Issues = "https://github.com/YukiAsuna19990413/Claude-Document-Extractor/issues"
Documentation = "https://github.com/YukiAsuna19990413/Claude-Document-Extractor/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"